--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,11 +15,26 @@
   <%= @book.detail %>
 </p>
 
+
+ 
 <p>
    <% if @book.image.attached? %>
      <%= image_tag @book.image %>
    <% end %>
  </p>
 
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
+
+<h2>Review Form</h2>
+<%= form_with(model: @book_review, local: true) do |form| %>
+ <div class= "field">
+     <%= form.text_area :review %>
+     <%= form.hidden_field :book_id, :value => @book_id %>
+ </div>
+ 
+ <div class="action">
+     <%= form.submit %>
+ </div>
+ <% end %>
